# GraphAgentAutomated

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init_schema.py  0002_add_optimization_run_tables.py  0003_add_artifact_index_and_workflow_snapshot.py
docs/: 00_research_survey.md  01_requirements.md  02_system_design.md  03_test_design.md  04_implementation.md  09_execution_todo.md  10_research_charter.md  11_problem_and_claims.md  12_method_blueprint.md  13_system_arch_v2.md  14_synthesis_protocol.md  15_prompt_optimization_protocol.md  16_tool_mapping_and_policy.md  17_judge_reliability.md  18_search_and_convergence.md  19_mock_validation_report.md  20_real_experiment_plan.md  21_paper_package.md  22_top_conf_idea_rcds.md  23_production_readiness.md  24_codex_session_guide.md  25_research_gate.md  26_research_idea_backlog.md  27_idea_experiment_protocol.md  28_failure_taxonomy_calibration.md  29_research_gap_audit.md  30_failure_taxonomy_rules.md  31_hypothesis_evaluation.md  32_system_handbook.md
docs/benchmarks/: failure_taxonomy_rules_v1.json  hypothesis_idea1_v1.json  research_benchmark_v1.json  research_gate_v1.json
scripts/: analyze_experiment_arms.py  analyze_failure_taxonomy.py  cleanup_artifacts.py  evaluate_hypothesis.py  evaluate_research_gate.py  recompute_failure_taxonomy.py  run_experiment_matrix.py  run_manual_parity_matrix.py  run_research_pipeline.py
src/graph_agent_automated/: main.py
src/graph_agent_automated.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+66 files in other folders)
